--- a/be/package.json
+++ b/be/package.json
@@ -33,6 +33,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "firebase-admin": "^11.10.1",
     "mongodb": "^6.0.0",
     "mongoose": "^7.5.0",
     "passport-jwt": "^4.0.1",
