--- a/be/.env
+++ b/be/.env
@@ -19,3 +19,11 @@ FIREBASE_DATABASE_URL=https://test-auth-11abf.firebaseio.com
 # Pagination
 PAGE_DEFAULT=1
 LIMIT_DEFAULT=5
+
+
+#Email
+MAIL_HOST=smtp.gmail.com
+MAIL_USER=dtex.helpdesk@gmail.com
+MAIL_PASSWORD=jfrfpnrfnqejfklu
+
+
