seed data and crud any entity

--- a/be/.env
+++ b/be/.env
@@ -19,3 +19,7 @@ FIREBASE_DATABASE_URL=https://test-auth-11abf.firebaseio.com
 # Pagination
 PAGE_DEFAULT=1
 LIMIT_DEFAULT=5
+
+# Admin info
+EMAIL_ADMIN=admin@gmail.com
+PASSWORD_ADMIN=@Admin@TLCN2023
