--- a/fe/package.json
+++ b/fe/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "firebase": "^10.5.2",
     "next": "13.5.6",
+    "next-auth": "^4.24.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0"
