--- a/fe/package.json
+++ b/fe/package.json
@@ -15,7 +15,8 @@
     "next-auth": "^4.24.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "^20",
