Create product, store

--- a/fe/.env
+++ b/fe/.env
@@ -1,2 +1,2 @@
-# NEXT_PUBLIC_API_URL=https://tlcn-be-dev.adaptable.app/api
-NEXT_PUBLIC_API_URL=http://localhost:5000/api
+NEXT_PUBLIC_API_URL=https://tlcn-be-dev.adaptable.app/api
+# NEXT_PUBLIC_API_URL=https://e448-118-69-63-161.ngrok-free.app/api
