--- a/fe/package.json
+++ b/fe/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "chart.js": "^4.4.0",
     "firebase": "^10.5.2",
     "next": "13.5.6",
     "next-auth": "^4.24.4",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-quill": "^2.0.0",
