--- a/fe/package.json
+++ b/fe/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.0",
     "chart.js": "^4.4.0",
     "firebase": "^10.5.2",
@@ -19,6 +20,7 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-quill": "^2.0.0",
+    "react-redux": "^8.1.3",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
