--- a/be/.env
+++ b/be/.env
@@ -1,11 +1,12 @@
-DB_URI=mongodb+srv://haidang:Haidang1607@cluster0.gsqq9vs.mongodb.net/?retryWrites=true&w=majority
+DB_URI_PRODUCTION=mongodb+srv://haidang:Haidang1607@cluster0.gsqq9vs.mongodb.net/ReduxAndAuth?retryWrites=true&w=majority
+DB_URI_TEST=mongodb+srv://haidang:Haidang1607@cluster0.gsqq9vs.mongodb.net/TLCN_Test?retryWrites=true&w=majority
 PORT=5000
 
 # JWT
 JWT_ACCESS_TOKEN_SECRET=@@?Tieu@@LuanChuyen>Nganh@@///
 JWT_REFRESH_TOKEN_SECRET=@@?TieuLuan!!Chuyen---Nganh@@///
-JWT_ACCESS_TOKEN_EXPIRES=1h
-JWT_REFRESH_TOKEN_EXPIRES=1h
+JWT_ACCESS_TOKEN_EXPIRES=1d
+JWT_REFRESH_TOKEN_EXPIRES=7d
 
 # bcrypt
 SALT_ROUNDS=10
@@ -27,4 +28,10 @@ MAIL_PASSWORD=jfrfpnrfnqejfklu
 # Admin info
 EMAIL_ADMIN=admin@gmail.com
 PASSWORD_ADMIN=@Admin@TLCN2023
+
+# Cloudinary
+CLOUDINARY_NAME=dl3b2j3td
+CLOUDINARY_API_KEY=422179119531181
+CLOUDINARY_API_SECRET=kpOnhfXVTih-tLMQhDY0MX9hg_k
+
 
