--- a/fe/.env
+++ b/fe/.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_API_URL=https://tlcn-be-dev.adaptable.app/api
+NEXT_PUBLIC_API_URL=https://tlcnbe.adaptable.app/api
 NEXT_PUBLIC_PAYPAL_CLIENT_ID=AaIArGuZ6sRV-sw4UheMj5PqaoVSwthj1974PE4NWMnQImlRrFAp_7BnygXFuIiQPypwbjRhbLNamxnP
 # NEXT_PUBLIC_API_URL=https://e448-118-69-63-161.ngrok-free.app/api
