--- a/fe/package.json
+++ b/fe/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.0",
     "chart.js": "^4.4.0",
     "firebase": "^10.5.2",
+    "moment-timezone": "^0.5.43",
     "next": "13.5.6",
     "next-auth": "^4.24.4",
     "react": "^18",
