--- a/.github/workflows/nest.js.yml
+++ b/.github/workflows/nest.js.yml
@@ -26,7 +26,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        script: cd be
-    - run: npm ci
-    - run: npm run build
-    - run: npm run test:e2e
+    - name: Setup and run tests
+      working-directory: ./be
+      run: |
+        npm ci
+        npm run build
+        npm run test:e2e
