--- a/fe/package.json
+++ b/fe/package.json
@@ -35,6 +35,7 @@
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.11",
     "autoprefixer": "^10",
+    "encoding": "^0.1.13",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
