--- a/.github/workflows/nest.js.yml
+++ b/.github/workflows/nest.js.yml
@@ -26,4 +26,6 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build
-    - run: npm run test:e2e
+    - run: npm run test:e2e auth.e2e-spec.ts
+    - run: npm run test:e2e bill.e2e-spec.ts
+    - run: npm run test:e2e product.e2e-spec.ts
