--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment-timezone": "^0.5.43",
     "next": "13.5.6",
     "next-auth": "^4.24.4",
+    "next-share": "^0.27.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
