--- a/.github/workflows/nest.js.yml
+++ b/.github/workflows/nest.js.yml
@@ -31,3 +31,4 @@ jobs:
     - run: npm run test:e2e product.e2e-spec.ts
     - run: npm run test:e2e cart.e2e-spec.ts
     - run: npm run test:e2e bill.e2e-spec.ts
+    - run: npm run test:e2e category.e2e-spec.ts
