--- a/.github/workflows/nest.js.yml
+++ b/.github/workflows/nest.js.yml
@@ -33,3 +33,4 @@ jobs:
     - run: npm run test:e2e bill.e2e-spec.ts
     - run: npm run test:e2e category.e2e-spec.ts
     - run: npm run test:e2e feedback.e2e-spec.ts
+    - run: npm run test:e2e notification.e2e-spec.ts
