--- a/.github/workflows/nest.js.yml
+++ b/.github/workflows/nest.js.yml
@@ -34,3 +34,5 @@ jobs:
     - run: npm run test:e2e category.e2e-spec.ts
     - run: npm run test:e2e feedback.e2e-spec.ts
     - run: npm run test:e2e notification.e2e-spec.ts
+    - run: npm run test:e2e store.e2e-spec.ts
+    - run: npm run test:e2e user.e2e-spec.ts
